# Mesh-slicer

./: CMakeLists.txt  LICENSE  README.md
src/: defines.h  fitsurface.cpp  fitsurface.h  main.cpp  unproject_on_skeleton.cpp  unproject_on_skeleton.h
